Tps Switch - While

--- a/3-InstruccionSwitch/InstruccionSwitch-10.html
+++ b/3-InstruccionSwitch/InstruccionSwitch-10.html
@@ -10,7 +10,7 @@
 		<!--final de Estilos-->
 
 		<!--Lógica-Programación-->
-		<script type="text/javascript" src="jsInstruccionSwitch-10.js"></script>
+		<script type="text/javascript" src="ej_switch_10.js"></script>
         <!--Final de Lógica-Programación -->
 		
 
