--- a/3-InstruccionSwitch/InstruccionSwitch-06.html
+++ b/3-InstruccionSwitch/InstruccionSwitch-06.html
@@ -10,7 +10,7 @@
 		<!--final de Estilos-->
 
 		<!--Lógica-Programación-->
-		<script type="text/javascript" src="jsInstruccionSwitch-06.js"></script>
+		<script type="text/javascript" src="06 switch 2.js"></script>
         <!--Final de Lógica-Programación -->
 		
 
